# ros_opencat

./: .clang-format  .gitmodules  LICENSE  README.md
opencat/: CMakeLists.txt  package.xml  setup.py
opencat/include/opencat/: opencat.hpp  opencat_data.hpp
opencat/src/opencat/: opencat.cpp  roscat.py
opencat_control/: CMakeLists.txt  package.xml
opencat_control/include/: serial.hpp
opencat_control/include/opencat_control/: opencat_control.hpp
opencat_control/src/: opencat_control.cpp  opencat_control_node.cpp  serial.cpp
opencat_control/srv/: control_srv.srv
opencat_examples/: CMakeLists.txt  package.xml
opencat_examples/scripts/: opencat_examples_client_py
opencat_examples/src/: client_example.cpp  client_examples.cpp  control_examples.cpp  serial_example.cpp  serial_examples.cpp
opencat_serial/: CMakeLists.txt  package.xml
opencat_serial/include/opencat_serial/: opencat_serial.hpp  opencat_serial_data.hpp  serial.hpp
opencat_serial/src/: opencat_serial.cpp  serial.cpp
opencat_serial/src/opencat_serial/: opencat_serial.cpp
opencat_server/: CMakeLists.txt  package.xml
opencat_server/include/opencat_server/: opencat_server.hpp
opencat_server/src/: opencat_server.cpp  opencat_service_node.cpp
opencat_server/src/opencat_server/: opencat_server.cpp
petoi_ROS_model_docs/: nybble_ros_documentation.md
petoi_ROS_model_docs/bittle_ros/bittle_description/: package.xml
petoi_ROS_model_docs/bittle_ros/bittle_description/launch/: gazebo.launch
petoi_ROS_model_docs/bittle_ros/bittle_description/meshes/: a_1.stl  b__1.stl  base_link.stl  c_1.stl  c_thlf_1.stl  c_thlr_1.stl  c_tholf_1.stl  c_tholr__1.stl  c_thorf_1.stl  c_thorr_1.stl  c_thrf__1.stl  c_thrr_1.stl  cover_1.stl  d_1.stl  e_1.stl  f_1.stl  front__1.stl  g_1.stl  head__1.stl  j__1.stl  k_1.stl  l_1.stl  logo_3_1.stl  logo_4_1.stl  rear__1.stl  screw_10_1.stl  screw_11_1.stl  screw_12_1.stl  screw_13_1.stl  screw_15_1.stl  screw_16_1.stl  screw_17_1.stl  screw_18_1.stl  screw_1_1.stl  screw_20_1.stl  screw_21_1.stl  screw_2_1.stl  screw_4_1.stl  screw_6_1.stl  screwm_1_1.stl  (+18 more)
petoi_ROS_model_docs/bittle_ros/bittle_description/scripts/: joint_controller.py
petoi_ROS_model_docs/bittle_ros/bittle_description/urdf/: bittle.gazebo  bittle.xacro
petoi_ROS_model_docs/bittle_ros/bittle_gazebo/: CMakeLists.txt
petoi_ROS_model_docs/bittle_ros/bittle_joystick/: package.xml
petoi_ROS_model_docs/bittle_ros/bittle_joystick/launch/: bittle_joystick.launch
petoi_ROS_model_docs/nybble_ros/nybble_description/config/: controller.yaml
petoi_ROS_model_docs/nybble_ros/nybble_description/launch/: display.launch  gazebo.launch
petoi_ROS_model_docs/nybble_ros/nybble_description/meshes/: base_link.stl  battery_1.stl  horn_10_1.stl  (+42 more)
petoi_ROS_model_docs/nybble_ros/nybble_gazebo/: CMakeLists.txt  package.xml
petoi_ROS_model_docs/nybble_ros/nybble_joystick/: CMakeLists.txt
petoi_ros_docs/: bittle_ros_documentation.md  nybble_ros_documentation.md
petoi_ros_docs/bittle_ros/bittle_description/: CMakeLists.txt
petoi_ros_docs/bittle_ros/bittle_gazebo/: package.xml
petoi_ros_docs/bittle_ros/bittle_joystick/: CMakeLists.txt
petoi_ros_docs/nybble_ros/nybble_description/: CMakeLists.txt  package.xml
petoi_ros_docs/nybble_ros/nybble_joystick/: package.xml
(+88 files in other folders)
